  * Create a compat symlink /etc/sysctl.d/99-sysctl.conf as systemd-sysctl no
    longer reads /etc/sysctl.conf.
  * Bump Build-Depends on kmod to (>= 14).
  * Bump Build-Depends on libcryptsetup-dev to (>= 2:1.6.0) for tcrypt
    support.
  * Make kmod-static-nodes.service check for the kmod binary since we don't
    want a hard dependency on kmod e.g. for container installations.

 -- Michael Biebl <biebl@debian.org>  Sun, 27 Apr 2014 12:59:24 +0200

systemd (204-10) unstable; urgency=medium

  * In the udeb's udev.startup, make sure that /dev/pts exists.
  * systemd-logind-launch: Set the #files ulimit, for unprivileged LXC
    containers.
  * Drop udev.NEWS, it only applies to pre-squeeze.
  * Remove /var/log/udev on purge.
  * Always probe cpu support drivers. (LP #1207705)
  * On Dell PowerEdge systems, the iDRAC7 and later support a USB Virtual NIC
    for management. Name this interface "idrac" to avoid confusion with "real"
    network interfaces.
  * Drop numerical prefixes from patches, to avoid future diff noise when
    removing, cherry-picking, and merging patches. From now on, always use
    "gbp-pq export --no-patch-numbers" to update them.

 -- Martin Pitt <mpitt@debian.org>  Sun, 27 Apr 2014 11:53:52 +0200

systemd (204-9) unstable; urgency=medium

  * The "Flemish Beef and Beer Stew" release.

  [ Steve Langasek ]
  * Do proper refcounting of the PAM module package on prerm, so that we
    don't drop the module from the PAM config when uninstalling a
    foreign-arch package.  Related to Ubuntu bug #1295521.

  [ Martin Pitt ]
  * debian/udev.udev-finish.upstart: Fix path to tmp-rules,
    debian/extra/rule_generator.functions creates them in /run/udev/.
  * rules: Remove the kernel-install bits; we don't want that in Debian and
    thus it shouldn't appear in dh_install --list-missing output.
  * Ship sd-shutdown.h in libsystemd-daemon-dev.
  * Run dh_install with --fail-missing, to avoid forgetting files when we move
    to new versions.